-
Bug
-
Resolution: Done
-
P2: Important
-
5.13
-
None
-
326463142b42b03c0e4c59069e099d6fd27212ce (qt/qttools/5.13)
Sometimes, typically with external modules, qdoc complains that it cannot find the module header. Looking at the list of includepaths everything seems to be correct - but further debugging reveals that qdoc is trying to open a file '-I/path/to/module/header', i.e. the '-I' prefix is still part of the file name.
| For Gerrit Dashboard: QTBUG-76026 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 262836,2 | qdoc: Drop '-I' prefix from module header path | 5.13.0 | qt/qttools | Status: MERGED | +2 | 0 |