qdoc: Drop '-I' prefix from module header path

Under certain conditions the '-I' prefixes survive in the list of
resolved include paths.

Fixes: QTBUG-76026
Change-Id: Ie3543b5aa8b88d8021175b3168ab8de8a4497878
Reviewed-by: Martin Smith <martin.smith@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>